# zanzara-bot

./: .gitignore  Pipfile  bot.py  image.py  pyproject.toml  sample_config.json
